--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,15 +6,15 @@
 #    By: nfukuma <nfukuma@student.42tokyo.jp>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/18 22:41:02 by nfukuma           #+#    #+#              #
-#    Updated: 2022/10/07 02:06:13 by nfukuma          ###   ########.fr        #
+#    Updated: 2022/10/07 02:39:55 by nfukuma          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # set up
 NAME		=	philo
 CC		=	gcc
-#CFLAGS		=	-g -Wall -Werror -Wextra
-CFLAGS		=	-g -Wall -Werror -Wextra -fsanitize=thread
+CFLAGS		=	-g -Wall -Werror -Wextra
+#CFLAGS		=	-g -Wall -Werror -Wextra -fsanitize=thread
 
 # for *.c set up
 SRCS_NAME	=	main.c each_philo_routine.c moni_philos_routine.c util.c
@@ -36,10 +36,10 @@ $(OBJ_DIR):
 	mkdir -p obj
 
 $(OBJ_DIR)%.o : $(SRCS_DIR)%.c
-	$(CC) $(CFLAGS) $(INCLUDE_DIR) -c -lpthread -o $@ $<
+	$(CC) $(CFLAGS) $(INCLUDE_DIR) -c -o $@ $<
 
 $(NAME):	$(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -lpthread -o $@
+	$(CC) $(CFLAGS) $(OBJS) -o $@
 
 clean:
 	$(RM) -r $(OBJ_DIR)
